<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InterFace.Tour.AddTour">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="#000000"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_t_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/addimage">

                    </ImageView>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
<!--            <LinearLayout style="@style/s_horizontal">-->

<!--                <ImageButton-->
<!--                    android:id="@+id/btn_chooseImg_c"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:src="@drawable/gallery"-->
<!--                    android:layout_height="wrap_content"></ImageButton>-->

<!--            </LinearLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtIL_t_code"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_t_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tour_code"
                    android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtIL_t_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_t_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tourName"
                    android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout style="@style/s_title_content_small">
                <TextView
                    style="@style/s_title_content_small_text"
                    android:text="@string/choose_destination" />
                <View style="@style/s_title_content_small_view"></View>
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_t_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_spinner"
                android:padding="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtIL_t_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_t_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtIL_t_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_t_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_tick"
                    android:inputType="number"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout style="@style/s_title_content_small">
                <TextView
                    style="@style/s_title_content_small_text"
                    android:text="@string/vehicle" />

                <View style="@style/s_title_content_small_view"></View>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/chkBicycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bicycle" />

                    <CheckBox
                        android:id="@+id/chkBike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bike" />

                    <CheckBox
                        android:id="@+id/chkBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/chkTrain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train" />

                    <CheckBox
                        android:id="@+id/chkBoat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boat" />

                    <CheckBox
                        android:id="@+id/chkAirPlane"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/airplane" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtIL_t_departure"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_t_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/departure"
                    android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtIL_t_info"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_t_info"
                    android:layout_width="match_parent"
                    android:maxLines="15"
                    android:layout_height="150dp"
                    android:gravity="start"
                    android:hint="@string/info_tour"
                    android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout style="@style/s_horizontal">

                <Button
                    android:id="@+id/btn_add_tour"
                    style="@style/s_buttonBasic"
                    android:text="@string/save"></Button>

                <Button
                    android:id="@+id/btn_delete_tour"
                    style="@style/s_buttonBasic"
                    android:text="@string/delete"></Button>

                <Button
                    android:id="@+id/btn_cancel_tour"
                    style="@style/s_buttonBasic"
                    android:text="@string/cancel"></Button>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>