<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InterFace.Destination.AddDestination">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_d_avatar"
                android:layout_width="match_parent"
                android:src="@drawable/addimage"
                android:tag="null"
                android:layout_height="200dp">
            </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtIL_d_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_d_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desId" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtIL_d_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_d_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtIL_d_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_d_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout style="@style/s_title_content_small">
        <TextView
            style="@style/s_title_content_small_text"
            android:text="@string/chooseProvince" />

        <View style="@style/s_title_content_small_view"></View>
    </LinearLayout>


    <Spinner
        android:id="@+id/sp_d_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border_spinner"
        android:padding="20dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtIL_d_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_d_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="start"
            android:hint="@string/description_place"
            android:maxLines="20" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout style="@style/s_horizontal">

        <Button
            android:id="@+id/btn_d_add"
            style="@style/s_buttonBasic"
            android:text="@string/save"></Button>
        <Button
            android:id="@+id/btn_d_delete"
            style="@style/s_buttonBasic"
            android:text="@string/delete"></Button>

        <Button
            android:id="@+id/btn_d_cancel"
            style="@style/s_buttonBasic"
            android:text="@string/cancel"></Button>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>