<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InterFace.Customer.AddCustomerActivity">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutEditText_c_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_c_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customers_code">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutEditText_c_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_c_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/layoutEditText_c_birthOfDay"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:boxStrokeColor="@color/borderColor"
            android:outlineSpotShadowColor="@color/borderColor"
            android:outlineAmbientShadowColor="@color/borderColor"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_c_birthOfDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="dd/mm/yyyy">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/button_c_chooseDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_choose_date"
            ></ImageButton>
    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <RadioButton
            android:id="@+id/radioButton_c_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:checked="true"
            android:tag="@string/male"
            android:text="@string/male"></RadioButton>

        <RadioButton
            android:id="@+id/radioButton_c_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:tag="@string/female"
            android:text="@string/female"></RadioButton>

        <RadioButton
            android:id="@+id/radioButton_c_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:tag="@string/custom"
            android:text="@string/custom"></RadioButton>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutEditText_c_nnumberPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_c_numberPhone"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutEditText_c_gmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_c_gmail"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/gmail">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutEditText_c_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_c_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        style="@style/s_horizontal">

    <Button
        android:id="@+id/btn_add_customer"
        style="@style/s_buttonBasic"
        android:text="@string/add"></Button>

        <Button
            android:id="@+id/btn_c_cancel"
            style="@style/s_buttonBasic"
            android:text="@string/cancel"></Button>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>